k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-deployment
  namespace: swiggy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: swiggy
          image: REPLACE_IMAGE   # <-- replaced by pipeline
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
      restartPolicy: Always
