k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-svc
  namespace: swiggy
spec:
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
